--- a/Frontend/www/assets/less/pizza/pizza-card.less
+++ b/Frontend/www/assets/less/pizza/pizza-card.less
@@ -5,6 +5,97 @@
 
   h3 {
     color: @mainColor;
-    background-color: lighten(@mainColor, 45%);
+    background-color: lighten(@mainColo, 45%);
   }
+
+
 }
+.order {
+  font-size: 25px;
+}
+
+.ordername {
+  margin-left: 10px;
+}
+
+.ordercircle{
+  border-radius: 100%;
+  border: none;
+  background-color: #FEC731;
+  color: #FFF;
+  text-align: center;
+  width: 25px;
+  height: 25px;
+}
+
+.withSmth{
+  border-style: outset;
+  border-color: lightsteelblue;
+  border-radius: 10px;
+  font-size: 30px;
+  height: 50px;
+  width: 25%;
+  margin-left: 85%;
+}
+
+.rname {
+  position:absolute;
+  right: 15%;
+}
+
+.minus {
+  margin-left: 35%;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+  background-color: #FB5C5C;
+  border: none;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  box-shadow: 0 0 0 1px rgba(34,36,38,.15)
+  inset, 0 -0.3em 0 0 rgba(34,36,38,.15) inset;
+  color: #FFF;
+}
+
+.inp {
+  background-color:#E3DBDB;
+  width: 20px;
+  height: 30px;
+  border-radius: 3px;
+  border: none;
+  text-align: center;
+  font-family: "Courier New";
+  font-size:20px;
+  font-weight: bold;
+}
+
+.plus {
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+  background-color: #51EC5B;
+  border: none;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  box-shadow: 0 0 0 1px rgba(34,36,38,.15)
+  inset, 0 -0.3em 0 0 rgba(34,36,38,.15) inset;
+  color: #FFF;
+}
+
+.remove {
+  margin-left: 15%;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+  background-color: #FFF;
+  border: none;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  box-shadow: 0 0 0 1px rgba(34,36,38,.15)
+  inset, 0 -0.3em 0 0 rgba(34,36,38,.15) inset;
+  color : #FEC731;
+}
+
