--- a/Frontend/templates/PizzaCart_OneItem.ejs
+++ b/Frontend/templates/PizzaCart_OneItem.ejs
@@ -1,9 +1,12 @@
-<div>
+<div >
+    <div class = "col-12 col md-2">
     <%= pizza.title %> (<%= size %>)
     <div>Ціна: <%= pizza[size].price %> грн.</div>
     <div>
-        <button class="btn btn-danger minus">-</button>
-        <span class="label label-default"><%= quantity %></span>
+        <button class="btn minus">-</button>
+        <span class="label label-default "><%= quantity %></span>
         <button class="btn btn-success plus">+</button>
+        <button class="remove">X</button>
+    </div>
     </div>
 </div>
