--- a/Frontend/templates/PizzaMenu_OneItem.ejs
+++ b/Frontend/templates/PizzaMenu_OneItem.ejs
@@ -17,7 +17,7 @@ function getIngredientsArray(pizza) {
 }
 
    %>
-<div class="col-md-6 col-lg-4 pizza-card">
+<div class="col-12 col-md-10 col-lg-4 pizza-card">
     <div class="thumbnail">
         <img class="pizza-icon" src="<%= pizza.icon %>" alt="Pizza">
 
