--- a/Frontend/www/cosmetic.css
+++ b/Frontend/www/cosmetic.css
@@ -68,6 +68,7 @@
 
 .order {
     font-size: 25px;
+    margin-left: 83%;
 }
 
 .ordername {
@@ -86,9 +87,6 @@
 }
 
 .clear {
-    position: absolute;
-    top: 38px;
-    right: 10px;
     font-size: 12px;
     display: inline-block;
     margin-left: 10px;
@@ -164,7 +162,7 @@
 }
 
 .remove {
-    margin-left: 10%;
+    margin-left: 20px;
     border-radius: 100%;
     height: 30px;
     width: 30px;
@@ -179,9 +177,6 @@
 }
 
 .summary {
-    position: fixed;
-    bottom: 0px;
-    right: 20px;
     font-size: 20px;
     font-weight: bold;
     z-index: 2;
@@ -193,7 +188,7 @@
 .btn-final {
     margin-bottom: 30px;
     margin-top: 20px;
-    width: 80%;
+    width: 100px;
     margin-left: 10%;
     height: 50px;
     font-size: 25px;
@@ -222,6 +217,7 @@
     background-color: #E57F25;
     color: #FFF;
     padding-top: 10px;
+    z-index: 2;
 }
 
 .msg-top {
@@ -247,4 +243,26 @@
 #toBeCloned {
     visibility: hidden;
     position: absolute;
+}
+
+#googleMap{
+    position: absolute;
+    top: 250px;
+    left: 1050px;
+    height: 300px;
+    width: 300px;
+    z-index: 10;
+}
+
+@media(max-width: 1200px){
+    .md-2{
+
+    }
+
+    .md-2:hover{
+
+    }
+
+    .withSmth {
+    }
 }
